# zisk-zorch

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  requirements.in  requirements_lock_3_11.txt
.github/workflows/: ci.yml  frx-update.yml  jax-update.yml
docs/: README.md  architecture.md  conventions.md  development.md  inner-proof-wiring.md  stage1-commit.md  stage2-constraint-ingest.md  testing.md  zisk-baseline.md
golden/: Cargo.toml
golden/src/: main.rs
scripts/: extract_cexp.py
tools/fixture-gen/: Cargo.toml  README.md
tools/fixture-gen/src/: main.rs
zisk_zorch/: BUILD.bazel  bench_inner_proof.py  bench_inner_proof_test.py  golden.py  prover.py  prover_test.py
zisk_zorch/commit/: BUILD.bazel  fullprogram_commit_test.py  linear_hash.py  linear_hash_test.py  openings.py  openings_test.py  trace_commit.py  trace_commit_test.py
zisk_zorch/commit/testdata/fullprogram/input_data_seg00/: fixture_metadata.json  stage1_commit.json
zisk_zorch/commit/testdata/golden/: lde.json  linear_hash.json  merkle_proof.json  merkle_root.json  stage1_commit.json
zisk_zorch/constraints/: BUILD.bazel  __init__.py  chip_loader.py  chip_loader_test.py
zisk_zorch/deep/: BUILD.bazel  fri_polynomial.py  fri_polynomial_test.py  opening.py  opening_test.py
zisk_zorch/evals/: BUILD.bazel  lev.py  lev_test.py
zisk_zorch/evals/testdata/golden/: compute_lev.json
zisk_zorch/fri/: BUILD.bazel  fold.py  fold_test.py  prover.py  prover_test.py  queries.py  queries_test.py  seam.py  seam_test.py  verifier.py  verifier_test.py
zisk_zorch/fri/testdata/golden/: fri_final.json  fri_fold.json  fri_prove.json  grinding.json  query_sample.json
zisk_zorch/poseidon2/: BUILD.bazel  goldilocks.py  goldilocks_test.py
zisk_zorch/poseidon2/testdata/golden/: permutation.json
zisk_zorch/quotient/: BUILD.bazel  __init__.py  cexp_ref.py  cexp_ref_test.py  field_io.py  gsum.py  gsum_test.py  quotient.py  quotient_test.py  reauthor.py  reauthor_test.py  zerofier.py
zisk_zorch/quotient/testdata/: arith_cexp.json  arith_constraints.json  binary_cexp.json  binary_constraints.json  memalign_readbyte_cexp.json  memalign_readbyte_constraints.json
zisk_zorch/quotient/testdata/golden/: cexp_eval.json  gsum.json  zerofier_inv.json
zisk_zorch/transcript/: BUILD.bazel  transcript.py  transcript_test.py
zisk_zorch/transcript/testdata/golden/: transcript.json
