"""zisk-zorch — a lean ZisK prover built on zorch's scheme-agnostic blocks.

bzlmod module. bazel 9 dropped WORKSPACE, so dependencies and the hermetic
Python toolchain are declared here.

zisk-zorch consumes fractalyze/zorch (hashing + Merkle commitment + the rest
of the SNARK spine) and adds ONLY the ZisK-specific glue: pil2-stark's
Poseidon2-Goldilocks parameters, the pil2 transcript / linear-hash
conventions, and the byte-match against the pil2-proofman reference prover.
Nothing ZisK-specific belongs in zorch — it lives here.
"""

module(
    name = "zisk_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch is not published on a Bazel registry; pin it from GitHub so CI builds
# are reproducible. For local dev against a working copy, add to .bazelrc.user
# (gitignored):
#   common --override_module=zorch=/abs/path/to/your/zorch/checkout
bazel_dep(name = "zorch", version = "0.0.0")
git_override(
    module_name = "zorch",
    remote = "https://github.com/fractalyze/zorch.git",
    # main @ fractalyze/zorch#285 — the Poseidon2-Goldilocks permute carries its
    # 4×4 base M4 as an `external_m4` marker attribute (zorch#264), which zkx#676
    # parses and applies via multiply-free add-chains, routing the HorizenLabs M4
    # through the dedicated `zorch.poseidon2` emitter instead of the generic
    # register-spilling LoopFusion — collapsing the stage-1 commit compile from
    # minutes to seconds with byte-match intact. This pin MUST move in lockstep
    # with the matching `zkx-cuda-pjrt==…dev20260619015425` wheel in
    # requirements.in: a zorch whose own pip hub ships a different zkx wheel
    # either mis-applies circ to the HorizenLabs M4 (old wheel) or aborts the FRI
    # seam's EF bitcast-convert (missing zkx#696/#698) — both break the golden
    # byte-match. zorch#285 carries that same dev20260619015425 wheel + zk_dtypes
    # 0.0.7 (jax#214 registers Pasta dtypes → `pallas_sf`). Still carries the #255
    # k-ary fold *orchestration* seam (`PreFoldKGroupCommitRound` /
    # `verify_group_fold_chain` / `KFoldableCode`) the FRI host loop drives over.
    commit = "1918ba355a1d0cd1a9909b0d940825fd7a99d3b6",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / zkx-cuda-pjrt are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "zisk_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "zisk_zorch_pip")
