"""zisk-zorch — a lean ZisK prover built on zorch's scheme-agnostic blocks.

bzlmod module. bazel 9 dropped WORKSPACE, so dependencies and the hermetic
Python toolchain are declared here.

zisk-zorch consumes fractalyze/zorch (hashing + Merkle commitment + the rest
of the SNARK spine) and adds ONLY the ZisK-specific glue: pil2-stark's
Poseidon2-Goldilocks parameters, the pil2 transcript / linear-hash
conventions, and the byte-match against the pil2-proofman reference prover.
Nothing ZisK-specific belongs in zorch — it lives here.
"""

module(
    name = "zisk_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch arrives as a dev-release wheel via the pip hub (see requirements.in),
# not a Bazel module — so jax/zk_dtypes resolve once here. Targets depend on it
# with requirement("zorch").

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / zkx-cuda-pjrt are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "zisk_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "zisk_zorch_pip")
