load("@rules_python//python:defs.bzl", "py_library")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# Loaders for the golden/ JSON fixtures every byte-match test consumes.
py_library(
    name = "golden",
    srcs = [
        "__init__.py",
        "golden.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)
