load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# pil2's evmap: subsample a committed column to the base coset and dot it with
# the Lagrange-evaluation vector (`//zisk_zorch/evals:lev`).
py_library(
    name = "opening",
    srcs = [
        "__init__.py",
        "opening.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//zisk_zorch/fri:seam",
        requirement("frx"),
    ],
)

py_test(
    name = "opening_test",
    size = "small",
    srcs = ["opening_test.py"],
    deps = [
        ":opening",
        "//zisk_zorch/evals:lev",
        "//zisk_zorch/quotient:quotient",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zorch"),
    ],
)

# pil2's calculateFRIPolynomial: the DEEP-ALI batched quotient that becomes the
# FRI codeword.
py_library(
    name = "fri_polynomial",
    srcs = ["fri_polynomial.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":opening",
        "//zisk_zorch/evals:lev",
        "//zisk_zorch/fri:seam",
        "//zisk_zorch/quotient:quotient",
        requirement("frx"),
        requirement("zorch"),
    ],
)

py_test(
    name = "fri_polynomial_test",
    size = "small",
    srcs = ["fri_polynomial_test.py"],
    deps = [
        ":fri_polynomial",
        "//zisk_zorch/fri:fold",
        "//zisk_zorch/fri:seam",
        "//zisk_zorch/quotient:quotient",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zorch"),
    ],
)
