load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# pil2's calculateFRIPolynomial: threads the transcript and supplies pil2's coset,
# root, and LEv to zorch.pcs.deep's scheme-neutral batched quotient + evmap.
py_library(
    name = "fri_polynomial",
    srcs = [
        "__init__.py",
        "fri_polynomial.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//zisk_zorch/evals:lev",
        "//zisk_zorch/fri:seam",
        "//zisk_zorch/quotient:quotient",
        requirement("frx"),
        requirement("zorch"),
    ],
)

py_test(
    name = "fri_polynomial_test",
    size = "small",
    srcs = ["fri_polynomial_test.py"],
    deps = [
        ":fri_polynomial",
        "//zisk_zorch/fri:fold",
        "//zisk_zorch/fri:seam",
        "//zisk_zorch/quotient:quotient",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zorch"),
    ],
)

# pil2 evmap integration: pil2's LEv (`//zisk_zorch/evals:lev`) feeding
# zorch.pcs.deep.open_columns, pinned by the barycentric round trip.
py_test(
    name = "opening_test",
    size = "small",
    srcs = ["opening_test.py"],
    deps = [
        "//zisk_zorch/evals:lev",
        "//zisk_zorch/quotient:quotient",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zorch"),
    ],
)
