load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# pil2's FRI fold: coset Lagrange interpolation evaluated at the cubic challenge.
py_library(
    name = "fold",
    srcs = [
        "__init__.py",
        "fold.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/poly",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "fold_test",
    size = "medium",
    srcs = ["fold_test.py"],
    data = glob(["testdata/golden/fri_fold.json"]),
    deps = [
        ":fold",
        "//zisk_zorch:golden",
        requirement("absl_py"),
    ],
)
