load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# pil2's FRI fold: coset Lagrange interpolation evaluated at the cubic challenge.
py_library(
    name = "fold",
    srcs = [
        "__init__.py",
        "fold.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/poly",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "fold_test",
    size = "medium",
    srcs = ["fold_test.py"],
    data = glob(["testdata/golden/fri_fold.json"]),
    deps = [
        ":fold",
        "//zisk_zorch:golden",
        requirement("absl_py"),
    ],
)

# The full FRI prover: fold the layer chain, commit each layer, open queries.
py_library(
    name = "prover",
    srcs = ["prover.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":fold",
        "//zisk_zorch/commit:openings",
        "//zisk_zorch/commit:trace_commit",
        "//zisk_zorch/transcript",
        "@zorch//zorch/commit:merkle",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prover_test",
    size = "medium",
    srcs = ["prover_test.py"],
    data = glob(["testdata/golden/fri_prove.json"]),
    deps = [
        ":prover",
        "//zisk_zorch:golden",
        "//zisk_zorch/transcript",
        requirement("absl_py"),
    ],
)

# The FRI verifier: replay challenges, verify Merkle openings + fold consistency.
py_library(
    name = "verifier",
    srcs = ["verifier.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":fold",
        "//zisk_zorch/commit:openings",
        "//zisk_zorch/commit:trace_commit",
        "//zisk_zorch/transcript",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "verifier_test",
    size = "medium",
    srcs = ["verifier_test.py"],
    data = glob(["testdata/golden/fri_prove.json"]),
    deps = [
        ":prover",
        ":verifier",
        "//zisk_zorch:golden",
        "//zisk_zorch/transcript",
        requirement("absl_py"),
        requirement("zk_dtypes"),
    ],
)
