load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@zisk_zorch_pip//:requirements.bzl", "requirement")

# pil2's FRI fold: coset Lagrange interpolation evaluated at the cubic challenge.
py_library(
    name = "fold",
    srcs = [
        "__init__.py",
        "fold.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/coding:reed_solomon",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "fold_test",
    size = "medium",
    srcs = ["fold_test.py"],
    data = glob(["testdata/golden/fri_fold.json"]),
    deps = [
        ":fold",
        "//zisk_zorch:golden",
        requirement("absl_py"),
    ],
)

# Adapters binding pil2's FRI to zorch's k-ary fold seam: the KFoldableCode
# (grouping + coset fold) and the pil2 transcript as a zorch Transcript.
py_library(
    name = "seam",
    srcs = ["seam.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":fold",
        "//zisk_zorch/transcript",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# pil2's FRI query-position derivation: finalPol absorb -> challenge -> reseed
# with challenge++nonce -> getPermutations (grinding/PoW deferred, nonce input).
py_library(
    name = "queries",
    srcs = ["queries.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":seam",
        "//zisk_zorch/transcript",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "queries_test",
    size = "small",
    srcs = ["queries_test.py"],
    data = glob(["testdata/golden/query_sample.json"]),
    deps = [
        ":queries",
        "//zisk_zorch:golden",
        "//zisk_zorch/transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
    ],
)

# The full FRI prover: fold the layer chain, commit each layer, open queries.
py_library(
    name = "prover",
    srcs = ["prover.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":seam",
        "//zisk_zorch/commit:openings",
        "//zisk_zorch/commit:trace_commit",
        "//zisk_zorch/transcript",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/pcs:fold",
        "@zorch//zorch:prove",
        requirement("jax"),
        requirement("numpy"),
    ],
)

py_test(
    name = "prover_test",
    size = "medium",
    srcs = ["prover_test.py"],
    data = glob(["testdata/golden/fri_prove.json"]),
    deps = [
        ":prover",
        "//zisk_zorch:golden",
        "//zisk_zorch/transcript",
        requirement("absl_py"),
    ],
)

# The FRI verifier: replay challenges, verify Merkle openings + fold consistency.
py_library(
    name = "verifier",
    srcs = ["verifier.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":queries",
        ":seam",
        "//zisk_zorch/commit:openings",
        "//zisk_zorch/commit:trace_commit",
        "//zisk_zorch/transcript",
        "@zorch//zorch/commit:merkle",
        "@zorch//zorch/pcs:fold",
        requirement("jax"),
        requirement("numpy"),
    ],
)

py_test(
    name = "verifier_test",
    size = "medium",
    srcs = ["verifier_test.py"],
    data = glob(["testdata/golden/fri_prove.json"]),
    deps = [
        ":prover",
        ":queries",
        ":verifier",
        "//zisk_zorch:golden",
        "//zisk_zorch/transcript",
        requirement("absl_py"),
        requirement("zk_dtypes"),
    ],
)
